--- a/amorim/css/modules/_base.sass
+++ b/amorim/css/modules/_base.sass
@@ -16,7 +16,6 @@ body
   margin-left: auto
   width: 100%
   top: 0
-  position: fixed
   z-index: 8
   background: $black
   overflow: hidden
@@ -39,7 +38,7 @@ body
   font-size: 16px
   font-weight: 300
   border-radius: 4px
-  cursor: pointer  
+  cursor: pointer
 .nav a
   color: $white
 ul.nav a:hover
@@ -58,17 +57,22 @@ ul.nav a:hover
 .film figure
   position: relative
   overflow: hidden
+  border: 2px solid $white
 .film figcaption
   width: 100%
   height: 100%
   position: absolute
   top: 0
-  padding:50 30px
+  padding: 50px 30px
   left: 0
   margin-top: -500px
   border-radius: 5px
-  background-color: rgba(0,0,0,0.75)
-  -webkit-box-shadow: inset 0px 0px 5px 2px rgba(255,255,255,.75)
-  box-shadow: inset 0px 0px 5px 2px rgba(255,255,255,.75)
+  border: 0
+  background-color: rgba(0,0,0,0.9)
+  transition: all .6s ease-in-out
+.film i
+  color: $white
+  width: 100%
+  text-align: center
 .film:hover figcaption
   margin-top: 0px
