--- a/amorim/css/output.css
+++ b/amorim/css/output.css
@@ -1,77 +1,92 @@
-/*
-Error: Invalid CSS after "padding:": expected pseudoclass or pseudoelement, was "50 30px"
-        on line 66 of _base.sass
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: Arimo; }
 
-61: .film figcaption
-62:   width: 100%
-63:   height: 100%
-64:   position: absolute
-65:   top: 0
-66:   padding:50 30px
-67:   left: 0
-68:   margin-top: -500px
-69:   border-radius: 5px
-70:   background-color: rgba(0,0,0,0.75)
-71:   -webkit-box-shadow: inset 0px 0px 5px 2px rgba(255,255,255,.75)
+body {
+  background-color: #1d1d1d;
+  color: #FFF;
+  margin: 0;
+  padding: 0; }
 
-Backtrace:
-_base.sass:66
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:1164:in `expected'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:1098:in `expected'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:1093:in `tok!'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/static_parser.rb:277:in `pseudo'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/static_parser.rb:160:in `simple_selector_sequence'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/static_parser.rb:112:in `selector'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/static_parser.rb:86:in `selector_comma_sequence'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:1076:in `expr!'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/static_parser.rb:20:in `parse_selector'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:424:in `visit_rule'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:36:in `visit'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/stack.rb:79:in `block in with_base'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/stack.rb:115:in `with_frame'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/stack.rb:79:in `with_base'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:430:in `block (2 levels) in visit_rule'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:430:in `map'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:430:in `block in visit_rule'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:428:in `visit_rule'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:36:in `visit'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/stack.rb:79:in `block in with_base'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/stack.rb:115:in `with_frame'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/stack.rb:79:in `with_base'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:52:in `map'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:36:in `visit'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:157:in `visit'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/root_node.rb:36:in `css_tree'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/engine.rb:378:in `_render_with_sourcemap'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/engine.rb:295:in `render_with_sourcemap'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:490:in `update_stylesheet'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:209:in `each'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:470:in `on_file_changed'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:328:in `block in watch'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/vendor/listen/lib/listen/listener.rb:252:in `call'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid CSS after \"padding:\": expected pseudoclass or pseudoelement, was \"50 30px\"\A         on line 66 of _base.sass\A \A 61: .film figcaption\A 62:   width: 100%\A 63:   height: 100%\A 64:   position: absolute\A 65:   top: 0\A 66:   padding:50 30px\A 67:   left: 0\A 68:   margin-top: -500px\A 69:   border-radius: 5px\A 70:   background-color: rgba(0,0,0,0.75)\A 71:   -webkit-box-shadow: inset 0px 0px 5px 2px rgba(255,255,255,.75)"; }
+.header {
+  margin-right: auto;
+  margin-left: auto;
+  width: 100%;
+  top: 0;
+  z-index: 8;
+  background: #1d1d1d;
+  overflow: hidden;
+  color: #FFF;
+  border-bottom: 1px solid #2f2f2f;
+  backface-visibility: hidden; }
+
+.controls {
+  text-align: center;
+  padding: 20px;
+  color: #eee; }
+
+.controls label {
+  font-weight: 300;
+  margin: 0 0.4em 0 0; }
+
+.controls button {
+  display: inline;
+  padding: 0.4em 0.8em;
+  background: #666;
+  border: 0;
+  color: #ddd;
+  font-size: 16px;
+  font-weight: 300;
+  border-radius: 4px;
+  cursor: pointer; }
+
+.nav a {
+  color: #FFF; }
+
+ul.nav a:hover {
+  background-color: #1d1d1d; }
+
+.test ul {
+  background-color: white; }
+
+.list-films {
+  margin: 0;
+  padding: 0; }
+
+.container .mix {
+  text-align: left;
+  margin-bottom: 2%;
+  display: none; }
+
+.film {
+  padding: 0; }
+
+.film figure {
+  position: relative;
+  overflow: hidden;
+  border: 2px solid #FFF; }
+
+.film figcaption {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  padding: 50px 30px;
+  left: 0;
+  margin-top: -500px;
+  border-radius: 5px;
+  border: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  transition: all 0.6s ease-in-out; }
+
+.film i {
+  color: #FFF;
+  width: 100%;
+  text-align: center; }
+
+.film:hover figcaption {
+  margin-top: 0px; }
+
+/*# sourceMappingURL=output.css.map */
