last commit of the night

--- a/amorim/css/modules/_base.sass
+++ b/amorim/css/modules/_base.sass
@@ -70,6 +70,11 @@ ul.nav a:hover
   border: 0
   background-color: rgba(0,0,0,0.9)
   transition: all .6s ease-in-out
+  text-align: center
+  line-height: 2em
+.film a
+  color: $white
+  font-size: 1.8em
 .film i
   color: $white
   width: 100%
