--- a/media.css
+++ b/media.css
@@ -8,6 +8,9 @@
    background-color: #2c3e50;
 
 }
+.row div{
+  padding:20% 30%;
+}
 .section1{ background-color: #c0392b}
 .section2{background-color: #16a085}
 .section3{background-color: #8E44AD}
